--- a/Lab2/style.css
+++ b/Lab2/style.css
@@ -6,9 +6,10 @@
 
 body{
   background-color: #EDEDEF;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   line-height: 20px;
+  padding: 0;
   color: #AC7F7A;
 }
 
@@ -129,7 +130,7 @@ hr.brown{
 
 .content{
   width: 50%;
-  height: 400px;
+  height: 500px;
   float: left;
   padding: 0 0;
   text-align: center;
@@ -144,7 +145,7 @@ hr.brown{
   color: #A05841;
   font-size: 20px;
   font-weight: lighter;
-  padding-top: 20px;
+  padding-top: 80px;
   letter-spacing: 10px;
 }
 
@@ -152,7 +153,30 @@ hr.brown{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 10px 100px;
   color: #A05841;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: lighter;
   line-height: 25px;
+}
+
+.content-box2{
+  background-color: #123132;
+}
+
+.content-box2 h2{
+  color: #fff;
+  font-size: 90px;
+  line-height: 110px;
+  margin: 40px;
+}
+
+.content-box2 button{
+  background-color: #fff;
+  border: none;
+  font-size: 15px;
+  padding: 20px 70px;
+}
+
+.content-box2 button:hover{
+  color: #fff;
+  background-color: #6c757d;
 }
