--- a/Lab2/style.css
+++ b/Lab2/style.css
@@ -183,7 +183,7 @@ hr.brown{
 
 .contact{
   width: 100%;
-  height:800px;
+  height: 700px;
   background-image: url("img/pic9.png");
   background-size: cover;
   margin: 50px 0px;
@@ -267,8 +267,8 @@ footer h3{
 
 .contact-form textarea{
   width: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 17px;
-  height: 200px;
 }
 
 .information{
